--- a/components/styles.css
+++ b/components/styles.css
@@ -4,6 +4,6 @@
     top: 0; /* 상단으로 이동합니다. */
     left: 0; /* 좌측으로 이동합니다. */
     width: 0; /* 너비를 0으로 설정합니다. */
-    height: 0; /* 높이를 0으로 설정합니다. */
+    height: 9999; /* 높이를 으로 설정합니다. */
     overflow: hidden; /* 넘치는 내용을 숨깁니다. */
   }
